docs/spec/grammar/conformance/accept/10-literals.myc
// exercises: representation-typed literals (compact balanced-ternary, list, type args)
colony literals

fn samples() -> List<Ternary{6}> =
    [ <+0--0+>, <000000>, <------> ]
