docs/spec/grammar/conformance/reject/04-bad-trit.myc
// rejected: a trit literal contains a glyph outside {+, 0, -}
colony bad

fn f() -> Ternary{3} = <+x->
